--- a/src/app.css
+++ b/src/app.css
@@ -76,6 +76,14 @@ a {
   float: left;
 }
 
+.role__text {
+  text-transform: uppercase;
+  margin-left: 8px;
+  font-size: 11px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
 .cart__counter {
   margin-top: 7px;
   margin-left: 8px;
@@ -99,9 +107,23 @@ a {
   border-radius: 16px;
   background-color: #ffffff;
   border: 2px solid #e3e8f0;
+
 }
 
-.signInButton:hover {
+.auth-button {
+  font-size: 11px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  padding: 7px 0px;
+  width: 85px;
+  height: 32px;
+  border-radius: 16px;
+  background-color: #ffffff;
+  border: 2px solid #e3e8f0;
+  outline: 0 !important;
+}
+
+.auth-button:hover {
   color: #b9bed1;
 }
 
