--- a/src/app.css
+++ b/src/app.css
@@ -84,6 +84,10 @@ a {
   margin-bottom: 15px;
 }
 
+.cart:hover {
+  cursor: pointer;
+}
+
 .cart__counter {
   margin-top: 7px;
   margin-left: 8px;
