--- a/src/App/app.css
+++ b/src/App/app.css
@@ -327,13 +327,14 @@ td {
 
 #advantages {
 	height: 642px;
+  background-color: white;
 }
 
 .advantages__title {
 	font-size: 42px;
 	letter-spacing: 4px;
 	line-height: 17px;
-	color: rgb(0,0,0);
+	color: black;
 	text-align: center;
 	margin-top: 98px;
 }
@@ -561,4 +562,166 @@ td {
 .regForm__btn:hover {
 	background-color: white;
 	color: black;
+}
+
+.shop__addButton {
+  font-size: 11px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  padding: 7px 0px;
+  width: 85px;
+  height: 32px;
+  border-radius: 16px;
+  background-color: #ffffff;
+  border: 2px solid #e3e8f0;
+}
+
+.about {
+	height: 800px;
+  background-color: white;
+  padding-top: 1px;
+}
+
+.about-header {
+	color: #22241b;
+	font-family: "Montserrat";
+	font-size: 37px;
+	font-weight: 400;
+	line-height: 55px;
+	text-transform: uppercase;
+	letter-spacing: 4.44px;
+	margin-top: 76px;
+}
+
+.left-block {
+	float: left;
+	border: 1px red solid;
+}
+
+.background {
+	margin-top: 42px;
+	float: left;
+}
+
+.about__title {
+	opacity: 0.66;
+	color: #22241b;
+	font-family: "Montserrat";
+	font-size: 22px;
+	font-weight: 400;
+	line-height: 55px;
+	text-transform: uppercase;
+	letter-spacing: 2.64px;
+}
+
+.background__content {
+	width: 432px;
+	color: #22241b;
+	font-family: "Montserrat";
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 27px;
+	letter-spacing: 0.3px;
+	margin-top: 27px;
+}
+
+.right-block {
+	float: left;
+	margin-left: 48px;
+	margin-top: 42px;
+}
+
+.rhombuses {
+	margin-top: 18px;
+	margin-left: 19px;
+}
+
+.rhombuses__item {
+	float: left;
+	margin-right: 54px;
+}
+
+.rhombuses__item:nth-child(3) {
+	margin-right: 0px;
+}
+
+.rhombus {
+	box-sizing: border-box;
+	background: url(../Components/Home/img/rhombus.png) no-repeat center;
+	width: 105px;
+	height: 105px;
+	color: #204d15;
+	font-family: "Montserrat";
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 55px;
+	text-transform: uppercase;
+	letter-spacing: 2.4px;
+	text-align: center;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.signature {
+	width: 105px;
+	height: 27px;
+	color: #22241b;
+	font-family: "Montserrat";
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 18px;
+	text-transform: uppercase;
+	letter-spacing: 0.24px;
+	text-align: center;
+	margin-top: 25px;
+}
+
+.contact {
+	margin-top: 57px;
+	margin-left: 2px;
+}
+
+.contact__items {
+	margin-top: 12px;
+	float: left;
+}
+
+.contact__item {
+	color: #204d15;
+	font-family: "Montserrat";
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: 1.68px;
+	margin-bottom: 21px;
+}
+
+.contact__item:nth-child(3) {
+	margin-bottom: 0px;
+}
+
+.contact__block {
+	margin-top: 22px;
+	margin-left: 43px;
+	float: left;
+}
+
+.contact__img {
+	background: url(../Components/Home/img/icon.png) no-repeat center top;
+	float: left;
+	width: 64px;
+	height: 64px;
+}
+
+.contact__subscript {
+	opacity: 0.72;
+	color: #22241b;
+	font-family: "Montserrat";
+	font-size: 14px;
+	font-weight: 700;
+	font-style: italic;
+	line-height: 55px;
+	letter-spacing: 0.28px;
+	float: left;
+	margin-top: 3px;
+	margin-left: 20px;
 }
