prevent user from deleting products

--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -791,10 +791,11 @@ td {
   margin-bottom: 25px;
 }
 
-.modal {
+.userPage__modal {
   position: relative!important;
   width: 80%;
   margin-top: 400px;
+  height: 200px;
 }
 
 .modals.dimmer .ui.scrolling.modal {
