pagination for user list

--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -200,14 +200,9 @@ a {
 
 .main-content__table {
   background-color: white;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px 20px;
   margin-top: 50px;
-  margin-bottom: 50px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 15px;
+  height: 480px;
 }
 
 .main-content__table table {
@@ -892,4 +887,15 @@ td {
 
 .modal__button {
   padding-bottom: 20px;
+}
+
+.no-goods {
+  text-transform: uppercase;
+  font-family: "Montserrat";
+  font-size: 24px;
+  width: 400px;
+  height: 400px;
+  margin: 0px auto;
+  padding-top: 175px;
+  margin-top: 50px;
 }
