--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -459,7 +459,8 @@ td {
 
 .loginForm__input {
 	margin: 0px auto;
-  margin-bottom: 9px;
+  margin-top: 9px;
+	margin-bottom: 9px;
 	width: 370px;
 	height: 67px;
 	border-radius: 3px;
@@ -543,7 +544,6 @@ td {
 	height: 70px;
 	display: block;
 	margin: 0px auto;
-	margin-top: 60px;
 	border-radius: 4px;
 	border: 2px solid #ffffff;
 	background-color: rgba(0,0,0,0);
@@ -898,4 +898,16 @@ td {
   margin: 0px auto;
   padding-top: 175px;
   margin-top: 50px;
+}
+
+.form__message {
+  width: 400px;
+  height: 30px;
+  margin-left: 90px;
+  font-size: 15px;
+  color: red;
+}
+
+.regForm {
+  margin-top: -50px;
 }
