delete only one item of some product from cart

--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -911,3 +911,12 @@ td {
 .regForm {
   margin-top: -50px;
 }
+
+.cart__count {
+  font-size: 15px;
+  margin-right: 10px;
+}
+
+.cart__box {
+  border: 1px solid black;
+}
