--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -948,3 +948,32 @@ td {
 .rating__table {
   margin: 0px auto;
 }
+
+.product__tag {
+  font-size: 20px;
+  margin-right: 15px;
+  float: left;
+}
+
+.productCard__tag {
+  font-size: 15px;
+  margin-right: 5px;
+  float: left;
+}
+
+.productCard__tags {
+  margin-top: 5px;
+}
+
+.product__tags {
+  margin-top: 5px;
+  width: 470px;
+}
+
+.button__addTag {
+  margin-bottom: 5px;
+}
+
+.modal__icon {
+  cursor: pointer;
+}
