search users by name, surname and email

--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -201,7 +201,6 @@ a {
 .main-content__table {
   background-color: white;
   padding: 50px 20px;
-  margin-top: 50px;
   height: 480px;
 }
 
@@ -875,6 +874,7 @@ td {
 .main-content__goods {
   background-color: white;
   padding: 60px;
+  padding-top: 30px;
 }
 
 .page-button {
